--- a/doc/sphinx/source/wheel.ipynb
+++ b/doc/sphinx/source/wheel.ipynb
@@ -69,7 +69,7 @@
     "The problem setting\n",
     "-------------------\n",
     "\n",
-    "Let $\\Omega^1 \\subset \\R^2$ be the reference configuration of a 2D wheel and :math:`\\Omega^2 \\subset \\R^2` the reference configuration of a deformable foundation. We consider small deformation of these two bodies (linearized elasticity) and the contact between them. We also consider that the rim of the wheel is rigid and apply a vertical force on the wheel.\n",
+    "Let $\\Omega^1 \\subset \\R^2$ be the reference configuration of a 2D wheel and $\\Omega^2 \\subset \\R^2$ the reference configuration of a deformable foundation. We consider small deformation of these two bodies (linearized elasticity) and the contact between them. We also consider that the rim of the wheel is rigid and apply a vertical force on the wheel.\n",
     "\n",
     "Building the program\n",
     "--------------------\n",
@@ -117,7 +117,7 @@
     "Mesh generation\n",
     "***************\n",
     "\n",
-    "We consider that the radius of the wheel is 15cm and the one of the rim 8cm and that the wheel lies on a deformable foundation of thickness 10cm. We generate the mesh of the wheel using the experimental mesher of |gf|. Concerning the mesh of the foundation, we build a structured mesh (see the documentation of the Mesh object in the python interface)."
+    "We consider that the radius of the wheel is 15cm and the one of the rim 8cm and that the wheel lies on a deformable foundation of thickness 10cm. We generate the mesh of the wheel using the experimental mesher of GetFEM++. Concerning the mesh of the foundation, we build a structured mesh (see the documentation of the Mesh object in the python interface)."
    ]
   },
   {
@@ -336,7 +336,7 @@
     "Linearized elasticity bricks\n",
     "****************************\n",
     "\n",
-    "We add the |Lame| coefficients as data of the model and add a linearized elasticity brick for the wheel and the foundation:"
+    "We add the Lamé coefficients as data of the model and add a linearized elasticity brick for the wheel and the foundation:"
    ]
   },
   {
@@ -425,7 +425,7 @@
     "X \\longmapsto (X(1), 0)\n",
     "$$\n",
     "\n",
-    "where :math:`X` is the vector of coordinates of the point. We add this transformation to the model with the command"
+    "where $X$ is the vector of coordinates of the point. We add this transformation to the model with the command"
    ]
   },
   {
@@ -455,7 +455,7 @@
     "$$\n",
     "\\cdots + \\int_{\\Gamma_c} \\lambda_N(X) (\\delta_{u^1}(X)-\\delta_{u^2}(\\Pi(X)))\\cdot n d\\Gamma - \\int_{\\Gamma_c} \\left(\\lambda_N(X) + \\left(\\lambda_N(X) + \\frac{1}{h_T\\gamma_0}((X + u^1(X))\\cdot n - (\\Pi(X) - u^2(\\Pi(X)))\\cdot n\\right)_-\\right)\\delta_{\\lambda_N}(X) d\\Gamma = 0 ~~~~ \\forall \\delta_{\\lambda_N}, \\forall \\delta_{u^1}, \\forall \\delta_{u^2},\n",
     "$$\n",
-    "where :math:`\\Gamma_c` is the slave contact boundary, :math:`\\lambda_N` is the contact multiplier (contact pressure), :math:`h_T` is the radius of the element, :math:`\\Pi` is the transformation, `n` is the outward normal vector to the master contact boundary (here :math:`n = (0,1)`), :math:`\\gamma_0` is an augmentation parameter, :math:`(\\cdot)_-:I\\hspace{-0.2em}R\\rightarrow I\\hspace{-0.2em}R_+` is the negative part and :math:`\\delta_{\\lambda_N}, \\delta_{u^1}, \\delta_{u^2}` are the test  functions corresponding to :math:`\\lambda_N, u^1, u^2`, respectively.\n",
+    "where $\\Gamma_c$ is the slave contact boundary, $\\lambda_N$ is the contact multiplier (contact pressure), $h_T$ is the radius of the element, $\\Pi$ is the transformation, $n$ is the outward normal vector to the master contact boundary (here $n = (0,1)$), $\\gamma_0$ is an augmentation parameter, $(\\cdot)_-:I\\hspace{-0.2em}R\\rightarrow I\\hspace{-0.2em}R_+$ is the negative part and $\\delta_{\\lambda_N}, \\delta_{u^1}, \\delta_{u^2}$ are the test  functions corresponding to $\\lambda_N, u^1, u^2$, respectively.\n",
     "\n",
     "Using the weak form language, the contact condition can be added by:"
    ]
@@ -514,11 +514,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This multiplier represents the boundary stress that is necessary to prescribe the vertical displacement to be :math`(0, -\\alpha_D)`. The constraint we want to apply on this multiplier is that its integral over the rim boundary is the vertical force we want to apply. The corresponding weak formulation term to be added to the rest of the weak formulation reads\n",
+    "This multiplier represents the boundary stress that is necessary to prescribe the vertical displacement to be $(0, -\\alpha_D)$. The constraint we want to apply on this multiplier is that its integral over the rim boundary is the vertical force we want to apply. The corresponding weak formulation term to be added to the rest of the weak formulation reads\n",
     "$$\n",
     "  \\cdots + \\int_{\\Gamma_D} -\\lambda_D.\\delta_{u^1} + ((0, \\alpha_D) - u^1).\\delta_{\\lambda_D} + (\\lambda_D.(0,1) + F)\\delta_{\\alpha_D} d\\Gamma = 0,\n",
     "$$\n",
-    "where :math:`\\Gamma_D` is the rim boundary, :math:`F` is the applied density of force.\n",
+    "where $\\Gamma_D$ is the rim boundary, $F$ is the applied density of force.\n",
     "\n",
     "This could be added to the model with the weak form language:"
    ]
@@ -549,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more robustness, a small penalization on :math:`alpha_D` can be added"
+    "For more robustness, a small penalization on $\\alpha_D$ can be added"
    ]
   },
   {
