Revert "Update unit-disk.ipynb"
This reverts commit c8da3db721e17b814bf1620893a5b68f3b0b68ff.

--- a/doc/sphinx/source/unit-disk.ipynb
+++ b/doc/sphinx/source/unit-disk.ipynb
@@ -7,6 +7,7 @@
     "# 単位円盤上のPoisson方程式\n",
     "\n",
     "\n",
+    "<img src=\"naburaFACE02.bmp\" width=\"150\" height=\"100\">\n",
     "\n",
     "なぶらです。MathWork様の以下の[問題](https://jp.mathworks.com/help/pde/ug/solve-poissons-equation-on-a-unit-disk.html)が面白そうだったのでGetFEM++で解いてみます。円盤の半径は0.5で、円盤内ではPoisson方程式が成り立っているとします。円の境界にはDirichlet条件が設けられています。(画像はMathWorks様より引用)\n",
     "![Geometory](https://jp.mathworks.com/help/examples/pde/win64/pdedemo1_01.png)"
