--- a/doc/sphinx/source/unit-disk.ipynb
+++ b/doc/sphinx/source/unit-disk.ipynb
@@ -583,7 +583,7 @@
     "\n",
     "<img src=\"naburaFACE04.bmp\" width=\"150\" height=\"100\">\n",
     "\n",
-    "誤差のオーダーはMathWorks様と同じですね。問題なさそうです！この計算が参考になればうれしいです。ではまた。"
+    "誤差のオーダーはMathWorks様と同じですね。問題なさそうです！この計算が参考になればうれしいです。気に入っていただけたならStarをつけていただくと励みになります。ではまた。"
    ]
   },
   {
