--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -233,7 +233,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfu11 = gf.MeshFem(m0104, 2)"
+    "mfu11 = gf.MeshFem(m0104, 2)\n",
+    "mfu12 = gf.MeshFem(m0204, 2)\n",
+    "mfu13 = gf.MeshFem(m0404, 2)\n",
+    "mfu14 = gf.MeshFem(m0816, 2)\n",
+    "mfu21 = gf.MeshFem(m0104, 2)\n",
+    "mfu22 = gf.MeshFem(m0204, 2)\n",
+    "mfu23 = gf.MeshFem(m0404, 2)\n",
+    "mfu24 = gf.MeshFem(m0816, 2)\n",
+    "mfu31 = gf.MeshFem(m0104, 2)\n",
+    "mfu32 = gf.MeshFem(m0204, 2)\n",
+    "mfu33 = gf.MeshFem(m0404, 2)\n",
+    "mfu34 = gf.MeshFem(m0816, 2)\n",
+    "mfu41 = gf.MeshFem(m0104, 2)\n",
+    "mfu42 = gf.MeshFem(m0204, 2)\n",
+    "mfu43 = gf.MeshFem(m0404, 2)\n",
+    "mfu44 = gf.MeshFem(m0816, 2)\n",
+    "\n",
+    "f1 = gf.Fem('FEM_PRODUCT(FEM_PK(1, 2), FEM_PK(1, 2))') # 2次要素\n",
+    "f2 = gf.Fem('FEM_PRODUCT(FEM_PK(1, 1), FEM_PK(1, 1))') # 1次要素\n",
+    "f3 = gf.Fem('FEM_PRODUCT(FEM_PK_WITH_CUBIC_BUBBLE(1, 1), FEM_PK_WITH_CUBIC_BUBBLE(1, 1))') # 非適合要素\n",
+    "\n",
+    "mfu11.set_fem(f1)\n",
+    "mfu12.set_fem(f1)\n",
+    "mfu13.set_fem(f1)\n",
+    "mfu14.set_fem(f1)\n",
+    "mfu21.set_fem(f2)\n",
+    "mfu22.set_fem(f2)\n",
+    "mfu23.set_fem(f2)\n",
+    "mfu24.set_fem(f2)\n",
+    "mfu31.set_fem(f2)\n",
+    "mfu32.set_fem(f2)\n",
+    "mfu33.set_fem(f2)\n",
+    "mfu34.set_fem(f2)\n",
+    "mfu41.set_fem(f3)\n",
+    "mfu42.set_fem(f3)\n",
+    "mfu43.set_fem(f3)\n",
+    "mfu44.set_fem(f3)"
    ]
   },
   {
