--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -250,26 +250,42 @@
     "mfu43 = gf.MeshFem(m0404, 2)\n",
     "mfu44 = gf.MeshFem(m0816, 2)\n",
     "\n",
-    "f1 = gf.Fem('FEM_PRODUCT(FEM_PK(1, 2), FEM_PK(1, 2))') # 2次要素\n",
-    "f2 = gf.Fem('FEM_PRODUCT(FEM_PK(1, 1), FEM_PK(1, 1))') # 1次要素\n",
-    "f3 = gf.Fem('FEM_PRODUCT(FEM_PK_WITH_CUBIC_BUBBLE(1, 1), FEM_PK_WITH_CUBIC_BUBBLE(1, 1))') # 非適合要素\n",
+    "fem1 = gf.Fem('FEM_PRODUCT(FEM_PK(1, 2), FEM_PK(1, 2))') # 2次要素\n",
+    "fem2 = gf.Fem('FEM_PRODUCT(FEM_PK(1, 1), FEM_PK(1, 1))') # 1次要素\n",
+    "fem3 = gf.Fem('FEM_PRODUCT(FEM_PK_WITH_CUBIC_BUBBLE(1, 1), FEM_PK_WITH_CUBIC_BUBBLE(1, 1))') # 非適合要素\n",
     "\n",
-    "mfu11.set_fem(f1)\n",
-    "mfu12.set_fem(f1)\n",
-    "mfu13.set_fem(f1)\n",
-    "mfu14.set_fem(f1)\n",
-    "mfu21.set_fem(f2)\n",
-    "mfu22.set_fem(f2)\n",
-    "mfu23.set_fem(f2)\n",
-    "mfu24.set_fem(f2)\n",
-    "mfu31.set_fem(f2)\n",
-    "mfu32.set_fem(f2)\n",
-    "mfu33.set_fem(f2)\n",
-    "mfu34.set_fem(f2)\n",
-    "mfu41.set_fem(f3)\n",
-    "mfu42.set_fem(f3)\n",
-    "mfu43.set_fem(f3)\n",
-    "mfu44.set_fem(f3)"
+    "mfu11.set_fem(fem1)\n",
+    "mfu12.set_fem(fem1)\n",
+    "mfu13.set_fem(fem1)\n",
+    "mfu14.set_fem(fem1)\n",
+    "mfu21.set_fem(fem2)\n",
+    "mfu22.set_fem(fem2)\n",
+    "mfu23.set_fem(fem2)\n",
+    "mfu24.set_fem(fem2)\n",
+    "mfu31.set_fem(fem2)\n",
+    "mfu32.set_fem(fem2)\n",
+    "mfu33.set_fem(fem2)\n",
+    "mfu34.set_fem(fem2)\n",
+    "mfu41.set_fem(fem3)\n",
+    "mfu42.set_fem(fem3)\n",
+    "mfu43.set_fem(fem3)\n",
+    "mfu44.set_fem(fem3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "積分法を定義します。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mim1 = gf.Integ('IM_GAUSS1D(2)')"
    ]
   },
   {
