--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -285,7 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mim1 = gf.Integ('IM_GAUSS1D(2)')"
+    "mim1 = gf.Integ('IM_GAUSS1D(2)')\n",
+    "mim2 = gf.Integ('IM_GAUSS1D(1)')"
    ]
   },
   {
