--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -224,12 +224,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MeshFEMオブジェクトを作成し各メッシュと有限要素法を関連付けます。"
+    "各メッシュの左側面にDirichletを設定するための境界領域を設定します。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flst0104 = m0104.outer_faces()\n",
+    "flst0204 = m0204.outer_faces()\n",
+    "flst0404 = m0404.outer_faces()\n",
+    "flst0816 = m0816.outer_faces()\n",
+    "\n",
+    "fnor0104 = m0104.normal_of_faces(flst0104)\n",
+    "fnor0204 = m0204.normal_of_faces(flst0204)\n",
+    "fnor0404 = m0404.normal_of_faces(flst0404)\n",
+    "fnor0816 = m0816.normal_of_faces(flst0816)\n",
+    "\n",
+    "tleft0104 = abs(fnor0104[0, :] + 1) < 1e-14\n",
+    "tleft0204 = abs(fnor0204[0, :] + 1) < 1e-14\n",
+    "tleft0404 = abs(fnor0404[0, :] + 1) < 1e-14\n",
+    "tleft0816 = abs(fnor0816[0, :] + 1) < 1e-14\n",
+    "\n",
+    "fleft0104 = np.compress(tleft0104, flst0104, axis=1)\n",
+    "fleft0204 = np.compress(tleft0204, flst0204, axis=1)\n",
+    "fleft0404 = np.compress(tleft0404, flst0404, axis=1)\n",
+    "fleft0816 = np.compress(tleft0816, flst0816, axis=1)\n",
+    "\n",
+    "left = 1\n",
+    "\n",
+    "m0104.set_region(left, fleft0104)\n",
+    "m0204.set_region(left, fleft0204)\n",
+    "m0404.set_region(left, fleft0404)\n",
+    "m0816.set_region(left, fleft0816)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MeshFEMオブジェクトを作成し各メッシュと有限要素法を関連付けます。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
