Add right region

--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "各メッシュの左側面にDirichletを設定するための境界領域を設定します。"
+    "各メッシュの左側面にDirichlet条件を設定するための境界領域を設定します。各メッシュの右側面にNeumann条件を設定するための境界領域を設定します。"
    ]
   },
   {
@@ -243,17 +243,33 @@
     "fnor0404 = m0404.normal_of_faces(flst0404)\n",
     "fnor0816 = m0816.normal_of_faces(flst0816)\n",
     "\n",
+    "tright0104 = abs(fnor0104[0, :] - 1) < 1e-14\n",
+    "tright0204 = abs(fnor0204[0, :] - 1) < 1e-14\n",
+    "tright0404 = abs(fnor0404[0, :] - 1) < 1e-14\n",
+    "tright0816 = abs(fnor0816[0, :] - 1) < 1e-14\n",
+    "\n",
     "tleft0104 = abs(fnor0104[0, :] + 1) < 1e-14\n",
     "tleft0204 = abs(fnor0204[0, :] + 1) < 1e-14\n",
     "tleft0404 = abs(fnor0404[0, :] + 1) < 1e-14\n",
     "tleft0816 = abs(fnor0816[0, :] + 1) < 1e-14\n",
+    "\n",
+    "fright0104 = np.compress(tright0104, flst0104, axis=1)\n",
+    "fright0204 = np.compress(tright0204, flst0204, axis=1)\n",
+    "fright0404 = np.compress(tright0404, flst0404, axis=1)\n",
+    "fright0816 = np.compress(tright0816, flst0816, axis=1)\n",
     "\n",
     "fleft0104 = np.compress(tleft0104, flst0104, axis=1)\n",
     "fleft0204 = np.compress(tleft0204, flst0204, axis=1)\n",
     "fleft0404 = np.compress(tleft0404, flst0404, axis=1)\n",
     "fleft0816 = np.compress(tleft0816, flst0816, axis=1)\n",
     "\n",
-    "left = 1\n",
+    "right = 1\n",
+    "left = 2\n",
+    "\n",
+    "m0104.set_region(right, fright0104)\n",
+    "m0204.set_region(right, fright0204)\n",
+    "m0404.set_region(right, fright0404)\n",
+    "m0816.set_region(right, fright0816)\n",
     "\n",
     "m0104.set_region(left, fleft0104)\n",
     "m0204.set_region(left, fleft0204)\n",
