--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -347,6 +347,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "モデルを定義し、各ケースの変数を追加します。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md = gf.Model('real')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md.add_fem_variable('u11', mfu11)\n",
+    "md.add_fem_variable('u12', mfu12)\n",
+    "md.add_fem_variable('u13', mfu13)\n",
+    "md.add_fem_variable('u14', mfu14)\n",
+    "md.add_fem_variable('u21', mfu21)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
