Add apt.txt and requirements.txt

--- a/doc/sphinx/source/unit-disk.ipynb
+++ b/doc/sphinx/source/unit-disk.ipynb
@@ -23,7 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp \"/usr/lib/python2.7/dist-packages/getfem/_getfem.x86_64-linux-gnu.so\" ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
