--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -15,6 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.append("/usr/lib/python2.7/dist-packages")\n",
     "import getfem as gf\n",
     "import numpy as np"
    ]
