--- a/doc/sphinx/source/beam.ipynb
+++ b/doc/sphinx/source/beam.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append("/usr/lib/python2.7/dist-packages")\n",
+    "sys.path.append('/usr/lib/python2.7/dist-packages')\n",
     "import getfem as gf\n",
     "import numpy as np"
    ]
